--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -82,7 +82,7 @@
         .event-detail {
             margin-bottom: 20px;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: 3px solid @cultureColour;
             border-radius: 5px;
         }
 
