Added elements to Events Index and limited Calender Script

--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -47,6 +47,7 @@
                 <h2>Explore <span style="color: @cultureColour;">@ViewBag.Culture</span> Events!</h2>
                 <div id="culture" data-culture="@ViewBag.Culture" style="display: none;"></div>
                 <div id="calendar" class="mx-auto"></div>
+                <h6 style="background-color:powderblue;"><i>Click around the Calender to find Events for the Festivals above...</i></h6>
             </div>
         </div>
         <!--events list-->
