--- a/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
@@ -13,7 +13,7 @@
                 <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="row" style="background-size: cover; background-repeat: no-repeat;">
                         <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/2.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/jp/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
                             <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
                             <div class="col-6 offset-6" style="background-size: cover; background-repeat: no-repeat;">
@@ -32,7 +32,7 @@
                                 </div>
                             </div>
                             <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/3.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/jp/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/1.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/late1800s.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -82,7 +82,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/1901 act.png")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -94,7 +94,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/1944.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -126,7 +126,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/Japanese.png")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
