--- a/TP03MainProj/Views/Education/CountryStory/Vietnam.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Vietnam.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="row" style="background-size: cover; background-repeat: no-repeat;">
                         <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/2.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/vit/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
                             <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
                             <div class="col-6 offset-3" style="background-size: cover; background-repeat: no-repeat;">
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                             <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/3.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/vit/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/1.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/1975.webp")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -82,7 +82,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/1976.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -94,7 +94,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/post1975.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -126,7 +126,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/after1975.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -138,7 +138,8 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/community.jpg")" alt="The Last of us"></div>
+
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -170,7 +171,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/after1981.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
