--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -116,6 +116,19 @@
             border: 2px solid #FECE58;
             box-shadow: 0 0 20px 5px #FECE58;
         }
+        .timeline-image {
+            max-width: 100%; 
+            max-height: 5%; 
+            object-fit: cover; 
+            width: 100%; 
+            height: auto; 
+        }
+        .img-resize {
+            max-width: 75%;
+            max-height: auto;
+            object-fit: contain;
+        }
+
     </style>
 
 }
