--- a/TP03MainProj/Views/Education/CountryStory/China.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/China.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="row" style="background-size: cover; background-repeat: no-repeat;">
                         <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/2.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/cn/new born.png")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
                             <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
                             <div class="col-6 offset-3" style="background-size: cover; background-repeat: no-repeat;">
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                             <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/3.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/cn/1861.png")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/1.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/1850.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -83,7 +83,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/1861.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -95,7 +95,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/Late 1800s.png")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -127,7 +127,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/1901 act.png")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -139,7 +139,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/1970.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -171,7 +171,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/1986-199.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -183,7 +183,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Chinese/2024.webp")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
