--- a/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Korea.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="row" style="background-size: cover; background-repeat: no-repeat;">
                         <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/2.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/ko/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
                             <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
                             <div class="col-6 offset-6" style="background-size: cover; background-repeat: no-repeat;">
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                             <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/3.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/ko/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/1.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Korean/1960.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -81,7 +81,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Korean/1962.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -93,7 +93,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Korean/1979.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -111,21 +111,22 @@
                         </div>
                         <!-- // Article -->
                         <!-- Article -->
-                        <div class="de-timeline-article odd">
+                        <div class="de-timeline-article even">
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/1.webp")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
                                 <div class="year__">
                                     <div class="d-line"></div>
                                     <h4 class="de-timeline-year">1981-1991</h4>
+
                                 </div>
                                 <div class="content-right">
                                     <h3 class="de-timeline-title">A Decade of Growth and Recognition</h3>
                                     <p>The population grew from 389 in 1981 to 1,544 in 1991, marking significant community establishment in Victoria.</p>
+                                </div>
+                            </div>
+                            <div class="content-right-container">
+                                <div class="owl-single-dots owl-carousel owl-theme">
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Korean/1981.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -133,21 +134,22 @@
                         </div>
                         <!-- // Article -->
                         <!-- Article -->
-                        <div class="de-timeline-article even">
+                        <div class="de-timeline-article odd">
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
+                                <div class="owl-single-dots owl-carousel owl-theme">
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Korean/2016.jpg")" alt="The Last of us"></div>
+                                </div>
+                            </div>
+                            <div class="content-right-container">
                                 <div class="year__">
                                     <div class="d-line"></div>
                                     <h4 class="de-timeline-year">2017</h4>
                                 </div>
+
                                 <div class="content-right">
                                     <h3 class="de-timeline-title">Contemporary Vibrance</h3>
                                     <p>With 14,798 Koreans calling Victoria home, the community is now a vibrant part of the state's multicultural landscape, contributing professionally and culturally.</p>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
