--- a/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-lg-6" style="background-size: cover; background-repeat: no-repeat;">
                     <div class="row" style="background-size: cover; background-repeat: no-repeat;">
                         <div class="col-6" style="background-size: cover; background-repeat: no-repeat;">
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/2.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/phi/1.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
 
                             <div class="spacer-single" style="background-size: cover; background-repeat: no-repeat;"></div>
                             <div class="col-6 offset-6" style="background-size: cover; background-repeat: no-repeat;">
@@ -33,7 +33,7 @@
                                 </div>
                             </div>
                             <div class="spacer-10" style="background-size: cover; background-repeat: no-repeat;"></div>
-                            <img src="@Url.Content("~/Content/Customer/images/study-case-single/3.webp")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
+                            <img class="img-resize" src="@Url.Content("~/Content/Customer/images/study-case-single/main/phi/2.jpeg")" class="img-fluid rounded-10 wow zoomIn animated" alt="" style="visibility: visible; animation-name: zoomIn;">
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/1.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/early 20.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -83,7 +83,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1950.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
@@ -95,7 +95,7 @@
                             <div class="site-center-line"></div>
                             <div class="content-left-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/7.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1970.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="content-right-container">
@@ -127,7 +127,7 @@
                             </div>
                             <div class="content-right-container">
                                 <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/4.webp")" alt="The Last of us"></div>
+                                    <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/2016.jpg")" alt="The Last of us"></div>
                                 </div>
                             </div>
                             <div class="meta-dot">
