--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                                                 <p class="slider-teaser">Dive into the rich history, arts, and traditions of East Asia and experience its unique charm.</p>
                                                 <hr class="s2">
                                                 <div class="spacer-10"></div>
-                                                <a class="btn-main mb10" href="services.html">Explore Culture</a>&nbsp;
+                                                <a class="btn-main mb10" href="@Url.Action("DiverseCultures", "Education")">Explore Culture</a>&nbsp;
                                             </div>
                                         </div>
                                     </div>
@@ -53,7 +53,7 @@
                                                 <p class="slider-teaser">Hear the stories of East Asian immigrants who have made their mark in Melbourne, adding color and diversity to our city.</p>
                                                 <hr class="s2">
                                                 <div class="spacer-10"></div>
-                                                <a class="btn-main mb10" href="services.html">Join Festivities</a>&nbsp;
+                                                <a class="btn-main mb10" href="@Url.Action("Index", "Events")">Join Festivities</a>&nbsp;
                                                 @*<a class="btn-line mb10" href="contact.html">Free Consultation</a>*@
                                             </div>
                                         </div>
@@ -77,7 +77,7 @@
                                                 <p class="slider-teaser">Learn how to recognize and oppose discrimination, striving together to create a more inclusive and understanding environment for East Asian immigrants.</p>
                                                 <hr class="s2">
                                                 <div class="spacer-10"></div>
-                                                <a class="btn-main mb10" href="services.html">Support Culture</a>&nbsp;
+                                                <a class="btn-main mb10" href="@Url.Action("Index", "Education")">Support Culture</a>&nbsp;
                                                 @*<a class="btn-line mb10" href="contact.html">Free Consultation</a>*@
                                             </div>
                                         </div>
@@ -150,9 +150,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="subtitle s2 wow fadeInUp mb-3">Our Vision</div>
-                        <h2 class="mb20 wow fadeInUp" data-wow-delay=".2s">We aspire to create a digital landscape where technology seamlessly enhances productivity, connectivity, and sustainability, fostering a brighter, more efficient, and inclusive future for all.</h2>
-                        <a class="btn-main" href="contact.html">Let's Work Together</a>
+                        <div class="subtitle s2 wow fadeInUp mb-3">Our Mission</div>
+                        <h2 class="mb20 wow fadeInUp" data-wow-delay=".2s">Driven by the challenges faced by East Asian communities in Melbourne, we're committed to promoting multicultural understanding and respect. Our goal is to educate, unite, and empower, helping to diminish discrimination and celebrate our city's diverse heritage.</h2>
+                        @*<a class="btn-main" href="contact.html">Let's Work Together</a>*@
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
             </div>
         </section>
 
-        <section class="bg-dark-1 text-light">
+        @*<section class="bg-dark-1 text-light">
             <div class="container">
                 <div class="row align-items-center gx-5">
 
@@ -413,7 +413,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>*@
 
 
         @*<section class="pt60 pb60">
