--- a/TP03MainProj/Views/Education/MigrationStories.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories.cshtml
@@ -4,5 +4,138 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>MigrationStories</h2>
+<div class="no-bottom no-top" id="content" style="background-size: cover; background-repeat: no-repeat;">
+    <div id="top" style="background-size: cover; background-repeat: no-repeat;"></div>
+    <!-- section begin -->
+    <section id="subheader" style="background-size: cover; background-repeat: no-repeat;">
+        <div class="container" style="background-size: cover; background-repeat: no-repeat;">
+            <div class="row text-center" style="background-size: cover; background-repeat: no-repeat;">
+                <div class="col-lg-8 offset-lg-2" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="subtitle s2 wow fadeInUp mb-3 animated" style="background-size: cover; background-repeat: no-repeat; visibility: visible; animation-name: fadeInUp;">Explore</div>
+                    <h2 class="wow fadeInUp mb20 animated" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;"> Migration Stories</h2>
+                    <ul class="crumb" id="">
+                        <li style="font-size: large; color: rgba(0, 0, 0, 0.5)"><a href="@Url.Action("Index", "Home")">Home</a></li>
+                        <li style="font-size: large;" class="active"><a href="@Url.Action("Index", "Education")">Education Center</a></li>
+                        <li style="font-size: large; color: #d48810 " class="active">Migration Stories</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section close -->
 
+    <section class="no-top" style="background-size: cover; background-repeat: no-repeat;">
+        <div class="container" style="background-size: cover; background-repeat: no-repeat;">
+            <div class="row g-4" style="background-size: cover; background-repeat: no-repeat;">
+                <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+                                </div>
+                                <img alt="" src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="lazy">
+                            </div>
+                            <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                <h4><a href="news-single.html">A Glimpse into the Future of Technology</a></h4>
+                                <p>Dolore officia sint incididunt non excepteur ea mollit commodo ut enim reprehenderit cupidatat labore ad laborum consectetur consequat...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+
+                                </div>
+                                <img alt="" src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="lazy">
+                            </div>
+                            <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                <h4><a href="news-single.html">How AI is Transforming Industries</a></h4>
+                                <p>Dolore officia sint incididunt non excepteur ea mollit commodo ut enim reprehenderit cupidatat labore ad laborum consectetur consequat...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+
+                                </div>
+                                <img alt="" src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="lazy">
+                            </div>
+                            <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                <h4><a href="news-single.html">How Technology is Reshaping Our Lives</a></h4>
+                                <p>Dolore officia sint incididunt non excepteur ea mollit commodo ut enim reprehenderit cupidatat labore ad laborum consectetur consequat...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+
+                                </div>
+                                <img alt="" src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="lazy">
+                            </div>
+                            <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                <h4><a href="news-single.html">Cybersecurity in the Digital Age</a></h4>
+                                <p>Dolore officia sint incididunt non excepteur ea mollit commodo ut enim reprehenderit cupidatat labore ad laborum consectetur consequat...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+
+                                </div>
+                                <img alt="" src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="lazy">
+                            </div>
+                            <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                <h4><a href="news-single.html">Balancing Progress and Responsibility</a></h4>
+                                <p>Dolore officia sint incididunt non excepteur ea mollit commodo ut enim reprehenderit cupidatat labore ad laborum consectetur consequat...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mb10" style="background-size: cover; background-repeat: no-repeat;">
+                    <div class="bloglist item" style="background-size: cover; background-repeat: no-repeat;">
+                        <div class="post-content" style="background-size: cover; background-repeat: no-repeat;">
+                            <div class="post-image" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-tagline" style="background-size: cover; background-repeat: no-repeat;">
+
+                                </div>
+                                <img alt="" src="@Url.Content("~/Content/Customer/images/team/1.jpg")" class="lazy">
+                            </div>
+                            <div class="post-text" style="background-size: cover; background-repeat: no-repeat;">
+                                <div class="d-date" style="background-size: cover; background-repeat: no-repeat;"></div>
+                                <h4><a href="news-single.html">The Next Generation for the Digital Age</a></h4>
+                                <p>Dolore officia sint incididunt non excepteur ea mollit commodo ut enim reprehenderit cupidatat labore ad laborum consectetur consequat...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+</div>
