--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -158,253 +158,75 @@
             </div>
         </section>
 
-        <section>
+        <section id="cultural-events">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-12">
                         <div class="subtitle s2 wow fadeInUp mb-3">Explore Cultures</div>
                         <h2 class="wow fadeInUp" data-wow-delay=".2s">Select your Jam</h2>
                     </div>
                 </div>
-                <div class="row">
-                    @* Repeat this structure for each culture *@
+
+                <div class="row justify-content-center">
                     @foreach (var culture in new[] { "Chinese", "Japanese", "Korean", "Filipino", "Vietnamese" })
                     {
-                        <div class="col-lg-3 col-md-6 text-center mb-sm-20">
+                        <div class="col-lg-2 col-md-4 col-sm-6 text-center mb-sm-20 culture-item">
                             <a href="@Url.Action("Index", "Events", new { culture = culture })" class="culture-btn">
                                 <div class="bg-color-2 rounded-30 mb20 bg-warning">
                                     <img src="@Url.Content($"~/Content/Customer/images/team/{culture}.jpg")" class="img-fluid" alt="@culture Culture">
                                 </div>
                                 <h4 class="mb-0">@culture</h4>
                             </a>
-                            <div class="social-icons s2">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            </div>
                         </div>
                     }
                 </div>
             </div>
         </section>
 
-        @*<section class="bg-dark-1 text-light">
-            <div class="container">
-                <div class="row align-items-center gx-5">
-
-                    <div class="col-lg-6 mb-sm-20">
-                        <div class="subtitle wow fadeInUp mb-3">Trusted IT Solution</div>
-                        <h2 class="wow fadeInUp" data-wow-delay=".2s">Delivering outstanding IT services since 2008</h2>
-                        <p class="wow fadeInUp">We are a dynamic and forward-thinking IT company dedicated to transforming your digital world. With a passion for cutting-edge solutions and a commitment to exceptional service, we are your trusted partner in navigating the ever-evolving landscape of IT. Our team of skilled professionals is here to harness the power of technology, providing tailor-made solutions that drive your success. </p>
-                        <hr class="s2">
-                        <div class="spacer-10"></div>
-                        <a class="btn-line mb10" href="services.html">Our Services</a>
-                    </div>
-
-                    <div class="col-lg-6 position-relative">
-                        <div class="images-deco-1">
-                            <img src="@Url.Content("~/Content/Customer/images/misc/1.webp")" class="d-img-1 wow zoomIn" data-wow-delay="0s" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/misc/2.webp")" class="d-img-2 wow zoomIn" data-wow-delay=".5s" alt="">
-                            <div class="d-img-3 bg-color wow zoomIn" data-wow-delay=".6s"></div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <section class="bg-color">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-light">
-                        <div class="subtitle s2 mb20">Customer reviews</div>
-                        <h2 class="wow fadeInUp">4.85 out of 5</h2>
-                        <div class="spacer-20"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="owl-carousel owl-theme wow fadeInUp" id="testimonial-carousel">
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/1.jpg")"> <div>Michael S.<span>developer</span></div>
-                                    </div>
-                                    <p>
-                                        "We've entrusted our IT needs to UpTech for several years, and they've consistently exceeded our expectations. Their proactive approach to managing our IT infrastructure has eliminated downtime and ensured a secure, efficient environment.
-                                    </p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/2.jpg")"> <div>Robert L.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech's IT support services have been instrumental in keeping our systems running smoothly. Their team is quick to respond, expertly resolving any issues we encounter. Knowing that they have our IT needs covered allows us to focus on our core business with confidence."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/3.jpg")"> <div>Jake M.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech's cybersecurity solutions have transformed our security posture. Their comprehensive services have protected us from cyber threats and data breaches. We trust their expertise and diligence in monitoring and safeguarding our digital assets."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/4.jpg")"> <div>Alex P.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech helped us seamlessly transition to the cloud. Their cloud services have reduced our IT infrastructure costs while providing flexibility and scalability. The accessibility and security of their cloud solutions have been a game-changer for our growing business."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/5.jpg")"> <div>Carlos R.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech's data backup and recovery services have been a lifesaver for our critical data. Their solutions ensure our data's protection and quick recovery in the event of unforeseen events. Knowing our data is safe with UpTech is a source of great comfort."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/6.jpg")"> <div>Edward B.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech's IT consulting services have provided us with invaluable insights and strategies to optimize our IT infrastructure. Their expert advice has been instrumental in aligning our technology with our business goals and staying competitive."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/7.jpg")"> <div>Daniel H.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech's project management services have been essential for us. Their team efficiently oversees and coordinates complex IT projects, ensuring they are delivered on time and within budget. We appreciate their attention to detail and dedication to our success."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="de_testi s2">
-                                <blockquote>
-                                    <div class="de_testi_by">
-                                        <img alt="" src="@Url.Content("~/Content/Customer/images/testimonial/8.jpg")"> <div>Bryan G.<span>developer</span></div>
-                                    </div>
-                                    <p>"UpTech's network infrastructure services have transformed our connectivity. Their expertise in designing, implementing, and maintaining our network has improved our operational efficiency and communication. Their responsive support is always just a call away."</p>
-                                    <div class="de-rating-ext">
-                                        <span class="d-stars">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                        </span>
-                                    </div>
-                                </blockquote>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>*@
-
-
-        @*<section class="pt60 pb60">
-            <div class="container">
-                <div class="row g-4">
-                    <div class="col-md-12">
-                        <div id="owl-logo" class="logo-carousel no-alpha owl-carousel owl-theme">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/1.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/2.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/3.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/4.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/5.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/6.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/7.png")" class="img-fluid" alt="">
-                            <img src="@Url.Content("~/Content/Customer/images/logo-clients/8.png")" class="img-fluid" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>*@
 
     </div>
     <!-- content close -->
 </main>
+
+
+
+@section Scripts{
+    <style>
+
+        .culture-item {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.culture-btn {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+.culture-item .culture-btn {
+    overflow: hidden;
+    position: relative;
+    border-radius: 30px;
+    display: inline-block;
+}
+
+.culture-item .culture-btn img {
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    display: block;
+}
+
+.culture-item .culture-btn:hover img {
+    transform: scale(1.05);
+    opacity: 0.7;
+}
+
+.culture-item h4 {
+    transition: color 0.3s ease-in-out;
+}
+
+.culture-item:hover h4 {
+    color: #d48810;
+}
+
+    </style>
+    }
